Fix LanguageTagParser, remove deprecated RefJsonObject